--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start":"npx ts-node src/main.ts",
