--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
-    "start":"npx ts-node src/main.ts",
-    "start-prime":"npx ts-node src/main2.ts",
+    "start": "npx ts-node src/main.ts",
+    "start-prime": "npx ts-node src/main2.ts",
     "test": "jest"
+  },
+  "dependencies": {
+    "@types/node": "^20.3.1"
   }
 }
